@@ -144,7 +144,7 @@ class TestColumns(unittest.TestCase):
         self.assertEqual(len(self.table.columns), 3)
 
     def test_get_column_data(self):
-        self.assertSequenceEqual(self.table.columns['one']._data(), (1, 2, None))
+        self.assertSequenceEqual(self.table.columns['one'].get_data(), (1, 2, None))
 
     def test_get_column(self):
         self.assertSequenceEqual(self.table.columns['one'], (1, 2, None))
